--- a/index.html
+++ b/index.html
@@ -4,204 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Ultimate To-Do List</title>
-  <style>
-    :root {
-      --bg-light: #f7f7f7;
-      --card-light: #ffffff;
-      --text-light: #1f2937;
-      --accent-light: #6366f1;
-
-      --bg-dark: #0f172a;
-      --card-dark: #1e293b;
-      --text-dark: #f8fafc;
-      --accent-dark: #a5b4fc;
-
-      --transition-speed: 0.3s;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 30px 15px;
-      transition: background var(--transition-speed), color var(--transition-speed);
-    }
-
-    body.dark {
-      background: linear-gradient(to right, var(--bg-dark), #1e293b);
-      color: var(--text-dark);
-    }
-
-    .container {
-      background-color: var(--card-light);
-      color: var(--text-light);
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.2);
-      width: 100%;
-      max-width: 850px;
-      transition: background-color var(--transition-speed), color var(--transition-speed);
-    }
-
-    body.dark .container {
-      background-color: var(--card-dark);
-      color: var(--text-dark);
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.05);
-    }
-
-    h1 {
-      text-align: center;
-      color: var(--accent-light);
-      margin-bottom: 5px;
-      transition: color var(--transition-speed);
-    }
-
-    body.dark h1 {
-      color: var(--accent-dark);
-    }
-
-    .quote, .datetime {
-      text-align: center;
-      margin-bottom: 10px;
-      font-style: italic;
-      font-size: 0.95rem;
-    }
-
-    .form-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 15px;
-      margin-top: 20px;
-    }
-
-    .form-grid textarea {
-      grid-column: 1 / -1;
-      resize: vertical;
-    }
-
-    input, select, textarea {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 14px;
-      background-color: #f9fafb;
-      transition: 0.2s ease;
-    }
-
-    body.dark input, 
-    body.dark select, 
-    body.dark textarea {
-      background-color: #334155;
-      color: var(--text-dark);
-      border: 1px solid #475569;
-    }
-
-    button {
-      padding: 10px 18px;
-      background-color: var(--accent-light);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 15px;
-      margin-top: 20px;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #4f46e5;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin-top: 20px;
-    }
-
-    li {
-      background-color: #f1f5f9;
-      padding: 14px 18px;
-      border-left: 5px solid var(--accent-light);
-      border-radius: 10px;
-      margin-bottom: 12px;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    body.dark li {
-      background-color: #475569;
-      border-left-color: var(--accent-dark);
-    }
-
-    li.done {
-      text-decoration: line-through;
-      opacity: 0.6;
-    }
-
-    .task-content {
-      flex: 1 1 auto;
-      max-width: 85%;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 10px;
-      flex-shrink: 0;
-    }
-
-    .buttons button {
-      font-size: 18px;
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
-
-    .done-btn { color: green; }
-    .delete-btn { color: red; }
-
-    .stats {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: center;
-      margin-top: 25px;
-      gap: 10px;
-    }
-
-    .dark-toggle button {
-      background-color: #4b5563;
-      color: #f8fafc;
-      border-radius: 6px;
-    }
-
-    body.dark .dark-toggle button {
-      background-color: #e5e7eb;
-      color: #1f2937;
-    }
-
-    @media (max-width: 600px) {
-      .form-grid {
-        grid-template-columns: 1fr;
-      }
-
-      .task-content {
-        max-width: 100%;
-      }
-
-      .stats {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
